[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.6.0"
pinocchio-system = "0.2.0"
pinocchio-token = "0.2.0"
five8_const = "0.1.3"
# solana-program = "=2.0.8"
# borsh = "1.5.1"
# spl-token = { version = "5.0.1", features = ["no-entrypoint"] }
# bytemuck = { version = "1.19.0", features = ["derive", "const_zeroed"] }


[dev-dependencies]
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
solana-sdk = "=2.0.8"
spl-token = "=5.0.1"
